--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -246,6 +246,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  container-type: inline-size;
 }
 
 .calendar-header {
